Ajout de la gestion du tir